fix: z-index pop-up

--- a/src/styles/modules/cart/_buynow.scss
+++ b/src/styles/modules/cart/_buynow.scss
@@ -8,7 +8,7 @@
   border: $borderColor2 1px solid;
   background-color: $primaryColor3;
   padding: 3.2rem;
-  z-index: 5;
+  z-index: 25;
 }
 
 .finish-order__popup {
